<resources>
    <string name="app_name">Prototype</string>

    <!-- Strings for home screen -->
    <string name="home_title">shiftr</string>
    <string name="availablity">Edit Availability</string>
    <string name="schedule">See Schedule</string>
    <string name="requests">Request Time Off</string>
    <string name="log_out">Log Out</string>
    <string name="contacts">Contacts</string>
    <string name="register_user">Sign up</string>

    <!-- Strings for manager home screen -->
    <string name="edit_schedule">Edit Schedule</string>
    <string name="approve_requests">Approve Requests</string>

    <!-- Strings for Request off -->
    <string name="select_date">Select date to request off</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">The username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings for schedule -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="shift1">Shift 1: 6am - 10am</string>
    <string name="shift2">Shift 2: 10am - 2pm</string>
    <string name="shift3">Shift 3: 2pm - 6pm</string>
    <string name="shift4">Shift 4: 6pm - 10pm</string>


</resources>
