<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".ManagerHomeScreen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="86dp"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="75sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="28dp" />

    <Button
        android:id="@+id/button_schedule"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:onClick="openSchdule"
        android:text="@string/schedule"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_availability"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/edit_schedule"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_request"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/approve_requests"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonContacts"
            style="@android:style/Widget.Material.Light.Button.Toggle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/contacts"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_exit"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginBottom="49dp"
        android:backgroundTint="#db7a7a"
        android:onClick="logOut"
        android:text="@string/log_out"
        android:textColor="#bc0f0f"
        android:textSize="24sp" />

</LinearLayout>