<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeScreen"
    android:gravity="center|top">

    <Space
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="86dp"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="75sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="124dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="124dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:onClick="login"
        android:text="@string/action_sign_in"
        android:textSize="24sp" />
</LinearLayout>